@@ -17,16 +17,20 @@ import java.util.Date;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.action.ToolBarManager;
+import org.eclipse.jface.resource.FontDescriptor;
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.events.DisposeEvent;
+import org.eclipse.swt.events.DisposeListener;
+import org.eclipse.swt.events.PaintEvent;
 import org.eclipse.swt.events.PaintListener;
 import org.eclipse.swt.graphics.Color;
+import org.eclipse.swt.graphics.Font;
 import org.eclipse.swt.graphics.Point;
 import org.eclipse.swt.layout.FillLayout;
 import org.eclipse.swt.widgets.Composite;
@@ -120,6 +124,34 @@ public class SecuritiesChart
         }
     }
 
+    private static class ChartIntervalOrMessage
+    {
+        private final String message;
+        private final ChartInterval interval;
+
+        private ChartIntervalOrMessage(ChartInterval interval)
+        {
+            this.interval = interval;
+            this.message = null;
+        }
+
+        private ChartIntervalOrMessage(String message)
+        {
+            this.interval = null;
+            this.message = message;
+        }
+
+        public String getMessage()
+        {
+            return message;
+        }
+
+        public ChartInterval getInterval()
+        {
+            return interval;
+        }
+    }
+
     public enum IntervalOption
     {
         M1(Messages.SecurityTabChart1M, Messages.SecurityTabChart1MToolTip), //
@@ -153,49 +185,52 @@ public class SecuritiesChart
             return tooltip;
         }
 
-        public ChartInterval getInverval(Client client, CurrencyConverter converter, Security security)
+        public ChartIntervalOrMessage getInterval(Client client, CurrencyConverter converter, Security security)
         {
             LocalDate now = LocalDate.now();
 
             switch (this)
             {
                 case M1:
-                    return new ChartInterval(now.minus(Period.ofMonths(1)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(1)), now));
                 case M2:
-                    return new ChartInterval(now.minus(Period.ofMonths(2)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(2)), now));
                 case M6:
-                    return new ChartInterval(now.minus(Period.ofMonths(6)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofMonths(6)), now));
                 case Y1:
-                    return new ChartInterval(now.minus(Period.ofYears(1)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(1)), now));
                 case Y2:
-                    return new ChartInterval(now.minus(Period.ofYears(2)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(2)), now));
                 case Y3:
-                    return new ChartInterval(now.minus(Period.ofYears(3)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(3)), now));
                 case Y5:
-                    return new ChartInterval(now.minus(Period.ofYears(5)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(5)), now));
                 case Y10:
-                    return new ChartInterval(now.minus(Period.ofYears(10)), now);
+                    return new ChartIntervalOrMessage(new ChartInterval(now.minus(Period.ofYears(10)), now));
                 case YTD:
-                    return new ChartInterval(now.minus(Period.ofDays(now.getDayOfYear() - 1)), now);
+                    return new ChartIntervalOrMessage(
+                                    new ChartInterval(now.minus(Period.ofDays(now.getDayOfYear() - 1)), now));
                 case H:
                     List<TransactionPair<?>> tx = security.getTransactions(client);
                     if (tx.isEmpty())
-                        return new ChartInterval(now, now);
+                        return new ChartIntervalOrMessage(Messages.SecuritiesChart_NoDataMessage_NoHoldings);
 
                     Collections.sort(tx, TransactionPair.BY_DATE);
                     boolean hasHoldings = ClientSnapshot.create(client, converter, LocalDate.now())
                                     .getPositionsByVehicle().containsKey(security);
 
-                    return new ChartInterval(tx.get(0).getTransaction().getDateTime().toLocalDate(), hasHoldings
-                                    ? LocalDate.now()
-                                    : tx.get(tx.size() - 1).getTransaction().getDateTime().toLocalDate());
+                    return new ChartIntervalOrMessage(
+                                    new ChartInterval(tx.get(0).getTransaction().getDateTime().toLocalDate(),
+                                                    hasHoldings ? LocalDate.now()
+                                                                    : tx.get(tx.size() - 1).getTransaction()
+                                                                                    .getDateTime().toLocalDate()));
                 case ALL:
                     List<SecurityPrice> prices = security.getPricesIncludingLatest();
-
                     if (prices.isEmpty())
-                        return new ChartInterval(now, now);
+                        return new ChartIntervalOrMessage(Messages.SecuritiesChart_NoDataMessage_NoPrices);
                     else
-                        return new ChartInterval(prices.get(0).getDate(), prices.get(prices.size() - 1).getDate());
+                        return new ChartIntervalOrMessage(new ChartInterval(prices.get(0).getDate(),
+                                        prices.get(prices.size() - 1).getDate()));
 
                 default:
                     throw new IllegalArgumentException();
@@ -274,6 +309,9 @@ public class SecuritiesChart
          */
         public static ChartRange createFor(List<SecurityPrice> prices, ChartInterval chartInterval)
         {
+            if (chartInterval == null)
+                return null;
+
             int start = Collections.binarySearch(prices, new SecurityPrice(chartInterval.getStart(), 0),
                             new SecurityPrice.ByDate());
 
@@ -359,6 +397,8 @@ public class SecuritiesChart
 
     private int swtAntialias = SWT.ON;
 
+    private MessagePainter messagePainter = new MessagePainter();
+
     public SecuritiesChart(Composite parent, Client client, CurrencyConverter converter)
     {
         this.client = client;
@@ -375,6 +415,10 @@ public class SecuritiesChart
 
         chart.getPlotArea().addPaintListener(event -> customPaintListeners.forEach(l -> l.paintControl(event)));
         chart.getPlotArea().addPaintListener(event -> customBehindPaintListener.forEach(l -> l.paintControl(event)));
+        chart.getPlotArea().addPaintListener(this.messagePainter);
+        chart.getPlotArea().addDisposeListener(this.messagePainter);
+
+        messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoSecuritySelected);
 
         setupTooltip();
 
@@ -440,9 +484,9 @@ public class SecuritiesChart
         toolTip.overrideValueFormat(Messages.LabelChartDetailMarkerPurchaseMovingAverage, calculatedFormat);
 
         toolTip.addExtraInfo((composite, focus) -> {
-            if (focus instanceof Date)
+            if (focus instanceof Date focusDate)
             {
-                Instant instant = ((Date) focus).toInstant();
+                Instant instant = focusDate.toInstant();
                 ZonedDateTime zdt = instant.atZone(ZoneId.systemDefault());
                 LocalDate date = zdt.toLocalDate();
 
@@ -451,10 +495,10 @@ public class SecuritiesChart
                 customTooltipEvents.stream() //
                                 .filter(t -> displayInterval.contains(t.getDateTime())) //
                                 .forEach(t -> {
-                                    if (t instanceof AccountTransaction)
-                                        addDividendTooltip(composite, (AccountTransaction) t);
-                                    else if (t instanceof PortfolioTransaction)
-                                        addInvestmentTooltip(composite, (PortfolioTransaction) t);
+                                    if (t instanceof AccountTransaction at)
+                                        addDividendTooltip(composite, at);
+                                    else if (t instanceof PortfolioTransaction pt)
+                                        addInvestmentTooltip(composite, pt);
                                 });
             }
         });
@@ -671,7 +715,7 @@ public class SecuritiesChart
                 chartConfig.add(ChartDetails.SCALING_LINEAR);
 
             ReadOnlyClient.unwrap(client).setProperty(PREF_KEY, String.join(",", //$NON-NLS-1$
-                            chartConfig.stream().map(ChartDetails::name).collect(Collectors.toList())));
+                            chartConfig.stream().map(ChartDetails::name).toList()));
 
             updateChart();
 
@@ -709,36 +753,42 @@ public class SecuritiesChart
             customPaintListeners.clear();
             customBehindPaintListener.clear();
             customTooltipEvents.clear();
+            chart.resetAxes();
+            chart.getTitle().setText(security == null ? "..." : security.getName()); //$NON-NLS-1$
+            messagePainter.setMessage(null);
 
-            if (security == null || security.getPrices().isEmpty())
+            if (security == null)
             {
-                chart.getTitle().setText(security == null ? "..." : security.getName()); //$NON-NLS-1$
-                chart.redraw();
+                messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoSecuritySelected);
                 return;
             }
 
-            chart.getTitle().setText(security.getName());
+            List<SecurityPrice> prices = security.getPricesIncludingLatest();
+            if (prices.isEmpty())
+            {
+                messagePainter.setMessage(Messages.SecuritiesChart_NoDataMessage_NoPrices);
+                return;
+            }
 
-            boolean showAreaRelativeToFirstQuote = chartConfig.contains(ChartDetails.CLOSING)
-                            || chartConfig.contains(ChartDetails.PURCHASEPRICE);
+            ChartIntervalOrMessage chartIntervalOrMessage = intervalOption.getInterval(client, converter, security);
+            if (chartIntervalOrMessage.getMessage() != null)
+            {
+                messagePainter.setMessage(chartIntervalOrMessage.getMessage());
+                return;
+            }
 
             // determine the interval to be shown in the chart
-
-            ChartInterval chartInterval = intervalOption.getInverval(client, converter, security);
-
-            // determine index range for given interval in prices list
-
-            List<SecurityPrice> prices = security.getPricesIncludingLatest();
-
+            ChartInterval chartInterval = chartIntervalOrMessage.getInterval();
             ChartRange range = ChartRange.createFor(prices, chartInterval);
             if (range == null)
             {
-                chart.redraw();
+                messagePainter.setMessage(
+                                MessageFormat.format(Messages.SecuritiesChart_NoDataMessage_NoPricesInSelectedPeriod,
+                                                intervalOption.getTooltip()));
                 return;
             }
 
             // prepare value arrays
-
             LocalDate[] dates = new LocalDate[range.size];
 
             double[] values = new double[range.size];
@@ -752,6 +802,8 @@ public class SecuritiesChart
             // performance issue in Drawing
             swtAntialias = range.size > 1000 ? SWT.OFF : SWT.ON;
 
+            boolean showAreaRelativeToFirstQuote = chartConfig.contains(ChartDetails.CLOSING)
+                            || chartConfig.contains(ChartDetails.PURCHASEPRICE);
             if (!chartConfig.contains(ChartDetails.PURCHASEPRICE))
             {
                 SecurityPrice p2 = prices.get(range.start);
@@ -926,7 +978,7 @@ public class SecuritiesChart
                             Messages.LabelChartDetailMovingAverage_200days, 200, colorEMA7);
 
         if (chartConfig.contains(ChartDetails.SHOW_LIMITS))
-            addLimitLines(chartInterval, range);
+            addLimitLines(range);
     }
 
     private void addChartMarkerForeground(ChartInterval chartInterval)
@@ -950,7 +1002,7 @@ public class SecuritiesChart
             addExtremesMarkerLines(chartInterval);
     }
 
-    private void addLimitLines(ChartInterval chartInterval, ChartRange range)
+    private void addLimitLines(ChartRange range)
     {
         this.security.getAttributes().getMap().forEach((key, val) -> {
             // null OR not Limit Price --> ignore
@@ -959,8 +1011,9 @@ public class SecuritiesChart
 
             LimitPrice limitAttribute = (LimitPrice) val;
 
-            Optional<AttributeType> attributeName = ReadOnlyClient.unwrap(client) // unwrap because ReadOnlyClient only contains/provides default attributes
-                            .getSettings().getAttributeTypes()
+            // unwrap because ReadOnlyClient only contains/provides default
+            // attributes
+            Optional<AttributeType> attributeName = ReadOnlyClient.unwrap(client).getSettings().getAttributeTypes()
                             .filter(attr -> attr.getId().equals(key)).findFirst();
             // could not find name of limit attribute --> don't draw
             if (attributeName.isEmpty())
@@ -1042,21 +1095,24 @@ public class SecuritiesChart
                         .filter(t -> t.getType() == PortfolioTransaction.Type.BUY
                                         || t.getType() == PortfolioTransaction.Type.DELIVERY_INBOUND)
                         .filter(t -> chartInterval.contains(t.getDateTime())) //
-                        .sorted(Transaction.BY_DATE).collect(Collectors.toList());
+                        .sorted(Transaction.BY_DATE).toList();
 
-        addInvestmentMarkers(purchase, PortfolioTransaction.Type.BUY.toString(), colorEventPurchase, PlotSymbolType.TRIANGLE);
+        addInvestmentMarkers(purchase, PortfolioTransaction.Type.BUY.toString(), colorEventPurchase,
+                        PlotSymbolType.TRIANGLE);
 
         List<PortfolioTransaction> sales = client.getPortfolios().stream().flatMap(p -> p.getTransactions().stream())
                         .filter(t -> t.getSecurity() == security)
                         .filter(t -> t.getType() == PortfolioTransaction.Type.SELL
                                         || t.getType() == PortfolioTransaction.Type.DELIVERY_OUTBOUND)
                         .filter(t -> chartInterval.contains(t.getDateTime())) //
-                        .sorted(Transaction.BY_DATE).collect(Collectors.toList());
+                        .sorted(Transaction.BY_DATE).toList();
 
-        addInvestmentMarkers(sales, PortfolioTransaction.Type.SELL.toString(), colorEventSale, PlotSymbolType.INVERTED_TRIANGLE);
+        addInvestmentMarkers(sales, PortfolioTransaction.Type.SELL.toString(), colorEventSale,
+                        PlotSymbolType.INVERTED_TRIANGLE);
     }
 
-    private void addInvestmentMarkers(List<PortfolioTransaction> transactions, String seriesLabel, Color color, PlotSymbolType symbol)
+    private void addInvestmentMarkers(List<PortfolioTransaction> transactions, String seriesLabel, Color color,
+                    PlotSymbolType symbol)
     {
         if (transactions.isEmpty())
             return;
@@ -1076,7 +1132,7 @@ public class SecuritiesChart
         {
             Date[] dates = transactions.stream().map(PortfolioTransaction::getDateTime)
                             .map(d -> Date.from(d.atZone(ZoneId.systemDefault()).toInstant()))
-                            .collect(Collectors.toList()).toArray(new Date[0]);
+                            .toArray(size -> new Date[size]);
 
             double[] values = transactions.stream().mapToDouble(
                             t -> t.getGrossPricePerShare(converter.with(t.getSecurity().getCurrencyCode())).getAmount()
@@ -1123,8 +1179,9 @@ public class SecuritiesChart
 
                         event.gc.setForeground(Colors.theme().defaultForeground());
 
-                        // If the label does not start in negative, then we print it.
-                        if (x - (textExtent.x / 2) >= 0) 
+                        // If the label does not start in negative, then we
+                        // print it.
+                        if (x - (textExtent.x / 2) >= 0)
                             event.gc.drawText(label, x - (textExtent.x / 2), y + border.getSymbolSize(), true);
                     }
                 });
@@ -1138,7 +1195,7 @@ public class SecuritiesChart
                         .filter(t -> t.getSecurity() == security)
                         .filter(t -> t.getType() == AccountTransaction.Type.DIVIDENDS)
                         .filter(t -> chartInterval.contains(t.getDateTime())).sorted(Transaction.BY_DATE)
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (dividends.isEmpty())
             return;
@@ -1154,7 +1211,7 @@ public class SecuritiesChart
         {
             Date[] dates = dividends.stream().map(AccountTransaction::getDateTime)
                             .map(d -> Date.from(d.atZone(ZoneId.systemDefault()).toInstant()))
-                            .collect(Collectors.toList()).toArray(new Date[0]);
+                            .toArray(size -> new Date[size]);
 
             IAxis yAxis1st = chart.getAxisSet().getYAxis(0);
             double yAxis1stAxisPrice = Math.max(yAxis1st.getRange().lower * (1 - 2 * 0.08), 0.00001);
@@ -1238,7 +1295,8 @@ public class SecuritiesChart
                                 lastWriteLabelLevel3 = (x + (textExtent.x / 2));
                             }
 
-                            // If the label does not start in negative, then we print it.
+                            // If the label does not start in negative, then we
+                            // print it.
                             if (x - (textExtent.x / 2) >= 0)
                                 event.gc.drawText(label, x - (textExtent.x / 2), yPosLabel, true);
                         }
@@ -1284,9 +1342,9 @@ public class SecuritiesChart
                         .filter(p -> chartInterval.contains(p.getDate())) //
                         .min(Comparator.comparing(SecurityPrice::getValue));
 
-        max.ifPresent(high -> addExtremeMarker(high, PlotSymbolType.DIAMOND, // 
+        max.ifPresent(high -> addExtremeMarker(high, PlotSymbolType.DIAMOND, //
                         Messages.LabelChartDetailMarkerHigh, colorHigh));
-        min.ifPresent(low -> addExtremeMarker(low, PlotSymbolType.DIAMOND, // 
+        min.ifPresent(low -> addExtremeMarker(low, PlotSymbolType.DIAMOND, //
                         Messages.LabelChartDetailMarkerLow, colorLow));
     }
 
@@ -1329,9 +1387,10 @@ public class SecuritiesChart
                     else
                         y = y + inner.getSymbolSize();
 
-                    // If the label does not start in negative, then we print it.
-                    if (x - (textExtent.x / 2) >= 0) 
-                        event.gc.drawText(valueFormat, x - (textExtent.x / 2), y, true);   
+                    // If the label does not start in negative, then we print
+                    // it.
+                    if (x - (textExtent.x / 2) >= 0)
+                        event.gc.drawText(valueFormat, x - (textExtent.x / 2), y, true);
                 });
             }
         }
@@ -1409,7 +1468,7 @@ public class SecuritiesChart
                                         : chartInterval.getStart())
                         .distinct() //
                         .sorted() //
-                        .collect(Collectors.toList());
+                        .toList();
 
         // calculate FIFO purchase price for each event - separate lineSeries
         // per holding period
@@ -1501,7 +1560,7 @@ public class SecuritiesChart
                                         : chartInterval.getStart())
                         .distinct() //
                         .sorted() //
-                        .collect(Collectors.toList());
+                        .toList();
 
         // calculate floating avg purchase price for each event - separate
         // lineSeries
@@ -1602,5 +1661,41 @@ public class SecuritiesChart
                         .getRecord(security) //
                         .filter(r -> !r.getFifoCostPerSharesHeld().isZero()) //
                         .map(r -> r.getMovingAverageCostPerSharesHeld().getAmount() / Values.Quote.divider());
+    }
+
+    private static class MessagePainter implements PaintListener, DisposeListener
+    {
+        private String message;
+        private Font font;
+
+        private void setMessage(String message)
+        {
+            this.message = message;
+        }
+
+        @Override
+        public void paintControl(PaintEvent e)
+        {
+            if (message == null)
+                return;
+
+            if (font == null)
+                font = FontDescriptor.createFrom(e.gc.getFont()).increaseHeight(5).createFont(e.display);
+
+            e.gc.setFont(font);
+
+            Point txtExtend = e.gc.textExtent(message);
+            int posX = (e.width - txtExtend.x) / 2;
+            int posY = (e.height - txtExtend.y) / 2;
+            e.gc.setForeground(Colors.DARK_GRAY);
+            e.gc.drawText(message, posX, posY);
+        }
+
+        @Override
+        public void widgetDisposed(DisposeEvent e)
+        {
+            if (font != null)
+                font.dispose();
+        }
     }
 }
